# embedded-rust

./: README.md
accelerometer_led/: README.md
compass/: Cargo.toml
compass/src/: calibration.rs  led.rs  main.rs
i2c/src/: main.rs  serial_setup.rs
led-roulette/: Embed.toml  README.md
led-roulette/src/: main.rs
punch-o-meter/: Cargo.toml
punch-o-meter/src/: dir.rs  main.rs
uart/: Cargo.toml
uart/src/: main.rs
